--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,21 @@
   "dependencies": {
     "@heroui/react": "^2.6.14",
     "@iconify/react": "^5.2.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/vite": "^4.0.0",
-    "framer-motion": "^12.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.4",
     "iconify": "^1.4.0",
+    "lucide-react": "^0.474.0",
+    "mapbox-gl": "^3.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.2"
+    "react-map-gl": "^8.0.1",
+    "react-router-dom": "^6.28.2",
+    "recharts": "^2.15.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
